Drag images should paint descendants that are painting siblings of the dragged element

DOM descendant of an element is not necessarily painting descendant of it.
For example:
<div id="A" style="position:relative; z-index:0;">
  <div id="B" style="position:relative;">
    <div id="C" style="position:relative;">

Although C is a child of B, C actually gets painted by A because B is not
a stacking context. For drag image purposes, when B is dragged, the users
expect to see the whole DOM subtree being dragged. In this CL we start
painting from the nearest stacking context instead.

BUG=605119

Review-Url: https://codereview.chromium.org/1982943002
Cr-Commit-Position: refs/heads/master@{#395729}

Former-commit-id: 40333ebebd01babf43339e66ee470679a9922244